[gd_scene load_steps=2 format=3 uid="uid://eyx8bptnix5"]

[ext_resource type="Script" path="res://Scripts/card_ui.gd" id="1_kjf4d"]

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kjf4d")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 397.0
offset_bottom = 443.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 38.0
offset_right = 358.0
offset_bottom = 437.0

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="DescLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "ตกลง
"

[connection signal="pressed" from="Panel/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
